feat: Add lifecycle methods and bean post processor to MyController